chore: add package.json with devDependencies for TypeScript, ESLint, and Prettier